tests-integration/fixtures/checking/1772827560_coercible_higher_kinded_error/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Nothing :: forall (@a :: Type). Maybe (a :: Type)
Just :: forall (@a :: Type). (a :: Type) -> Maybe (a :: Type)
Nil :: forall (@a :: Type). List (a :: Type)
Cons :: forall (@a :: Type). (a :: Type) -> List (a :: Type) -> List (a :: Type)
coerceContainerDifferent :: Container Maybe -> Container List

Types
Maybe :: Type -> Type
List :: Type -> Type
Container :: (Type -> Type) -> Type

Roles
Maybe = [Representational]
List = [Representational]
Container = [Representational]

Diagnostics
error[NoInstanceFound]: No instance found for: Coercible @Type (Maybe (t :: Type)) (List (t :: Type))
  --> 11:1..11:62
   |
11 | coerceContainerDifferent :: Container Maybe -> Container List
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
